# bio-reproducer-loop

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
benchmarks/: CHANGELOG.md  README.md  paper-entries.md
benchmarks/baselines/: README.md
benchmarks/runner/: __init__.py  bundle_validator.py  cli.py  evaluator.py  independent_evaluator.py  reporter.py  runner.py
benchmarks/schemas/: bundle.schema.json  claims.schema.json  result.schema.json  rubric.schema.json  submission.schema.json
docs/: README.md  vision.md
docs/ac/: 0001-benchmark-layers.md  0002-benchmark-runner.md  0003-input-bundle-fidelity.md  README.md
docs/adr/: 0001-language.md  0002-benchmark-format.md  0003-test-layers.md  0004-test-infra.md  0005-independent-evaluation.md  0006-test-eval-domains.md  0007-input-bundle-fidelity.md  README.md
docs/interface/: 0001-benchmark-protocol.md  README.md
docs/plans/: README.md
docs/spec/: 0001-benchmark.md  README.md
evals/: README.md  conftest.py  coverage.yaml  profiles.yaml
evals/baselines/: README.md
evals/component/: test_components.py
evals/handoff/: test_handoffs.py
evals/runner/: __init__.py  config.py  loopflow.py
evals/schemas/: case.schema.json  result.schema.json
loops/bio-reproducer/: loop.md  pixi.toml  workflow.py
tests/: conftest.py
tests/integration/: __init__.py  test_chain_happy.py  test_chain_imperfect.py
tests/unit/: test_benchmark_structure.py  test_bootstrap.py  test_bundle_validator.py  test_data.py  (+8 more)
(+205 files in other folders)
