[project]
name = "bio-reproducer"
version = "0.1.0"
description = "AI Agent 驱动的生物信息学论文复现系统，配套内部测试体系和公开 benchmark"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"